gallery bug fix + onScroll pagination (still not responsive)

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -63,9 +63,15 @@ html {
     grid-gap: 2rem;
     grid-template-columns: repeat(7, 1fr);
     width: 100%;
+    grid-auto-rows: 15rem;
+    overflow: hidden;
     
-    img {
-        object-fit: fill;
-        width: 100%;
+    &__item {
+        overflow: hidden;
+        img {
+            object-fit: fill;
+            width: 100%;
+            overflow: hidden;
+        }
     }
 }
